<resources>
    <string name="app_name">淘矿</string>
    <string name="detail_buy_tips">马上购买</string>
    <string name="home_search_tips">输入关键词进行搜索</string>
    <string name="detail_show_all_goods_tips">全部宝贝 ></string>
    <string name="detail_selled_tips">对不起,该商品已售</string>
    <string name="detail_owner_tips">对不起,该商品是你发布的</string>发布成功
    <string name="detail_login_or_verify_tips">请先登陆或认证</string>
    <string name="detail_comment_success">评论成功</string>
    <string name="detail_comment_failure">评论失败</string>
    <string name="detail_no_qq_tips">您还未安装QQ</string>
    <string name="detail_comment_tips">留言</string>
    <string name="detail_open_qq">mqqwpa://im/chat?chat_type=wpa&#038;uin=%1$s</string>
    <string name="dialog_purchase_tips">确认购买?</string>
    <string name="dialog_purchase_cancel_tips">再想想</string>
    <string name="dialog_purchase_confirm_tips">得到它</string>
    <string name="dialog_collect_success_tips">收藏成功</string>
    <string name="dialog_buy_success_tips">购买成功</string>
    <string name="empty_data_tips">暂时没有数据哦~</string>
    <string name="signup_network_fail">网络连接失败</string>
    <string name="signup_success_tips">注册成功</string>
    <string name="signup_agree_tips">同意协议才能注册</string>
    <string name="signup_fail_tips">注册失败，该学号已被注册</string>
    <string name="signup_nickname_fail_tips">昵称字数小于4位或大于16位</string>
    <string name="signup_loginid_fail_tips">学号位数小于8位或大于16位</string>
    <string name="signup_password_fail_tips">密码位数小于4位或大于16位</string>
    <string name="my_trade_center">交易中心</string>
    <string name="my_user_center">用户中心</string>
    <string name="my_mine_selling">我发布的</string>
    <string name="my_mine_selled">我卖出的</string>
    <string name="my_mine_bought">我买到的</string>
    <string name="my_mine_want">我想要的</string>
    <string name="my_my_collect">我收藏的</string>
    <string name="my_verify">学生认证</string>
    <string name="my_change_password">修改密码</string>
    <string name="my_log_out">注销登录</string>
    <string name="my_about_us">关于我们</string>
    <string name="my_click_to_login_tips">点击去登录</string>
    <string name="my_log_out_title">确认退出?</string>
    <string name="my_log_out_confirm">是的呢~</string>
    <string name="my_log_out_cancel">点错了</string>
    <string name="aboutus_fs_content">&#160;&#160;翔工作室成立于2000年10月,19年以来一直负责学生在线的运营维护,并为矿大师生设计开发了矿友,导航站,矿大头像戳,学工处官网,矿大文库,易班场地申请系统等众多互联网产品。是矿大卓越的科技、媒体和通信(Technology,Media,Telecom)解决方案的提供者。我们的成员来自全校多个学院,十几年来老成员遍布百度,阿里,京东,今日头条,小米等各个互联网公司,这里拥有矿大学生群体中最好的设计与技术团队。</string>
    <string name="aboutus_join_qq_group">使用有问题?加入反馈群</string>
    <string name="about_us_share_app">觉得好用?分享给好友</string>
    <string name="search_title">搜索结果</string>
    <string name="release_sale_reasons">请描述转手原因、入手渠道和使用感受…</string>
    <string name="edit_input_qq_tips">请输入您的QQ号码</string>
    <string name="agreement_tips">在此特别提醒您（用户）在注册成为用户之前，请认真阅读本用户注册及使用APP隐私协议（以下简称“本协议”），确保您充分理解本协议中各条款。请您审慎阅读并选择接受或不接受本协议。除非您接受本协议所有条款，否则您无权注册、登录或使用本协议所涉服务。您的注册、登录、使用等行为将被视为对本协议的接受，并同意接受本协议各项条款的约束。 一、用户账号注册基本要求 用户在使用本服务前需要注册个人账号。该帐号应当使用学号注册，并且注册成功后用校园卡绑定认证。尚未用校园卡绑定认证的用户将不具有出售及买入的权利。 二、用户个人隐私信息保护 1、鉴于本APP用校园卡认证，用户有所顾忌。但不用担心用户信息被泄露，本团队会对用户信息进行加密处理并保证用户信息不被泄露。 2、如果本APP运行后台及本团队发现或收到他人举报用户，本团队有权在收到举报后48小时内对举报内容真假性进行核查，一经确定为真，本团队有权对被举报用户进行短期封禁帐号处理，被实施封禁的用户会在封禁期届满后自动恢复被封禁账号的功能。 三、用户使用内容规范 1、本条所述用户使用内容是指用户使用本APP的过程中所上传、发布、传播的任何内容，包括但不限于账号头像、名称等注册信息及出售商品图片、介绍等商品信息。 2、用户不得利用本APP服务制作、上传、发布、传播如下法规和校规禁止的内容： (1) 违反学生手册所确定的基本原则的； (2) 危害国家或学校的安全，破坏统一的； (3) 损害学校荣誉和利益的； (4) 散布谣言，扰乱学校秩序，破坏学校稳定的； (5) 诱导同学违法犯罪和散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的； (6) 侮辱或者诽谤他人，侵害他人合法权益的； 3、用户不得利用本账号或本APP服务制作、上传、发布、传播如下干扰本APP正常运营的内容： (1) 含有辱骂、恐吓、威胁内容的； (2) 含有骚扰、垃圾广告、恶意信息、诱骗信息的； (3) 涉及他人隐私、个人信息或资料的； (4) 侵害他人名誉权、肖像权等合法权利的； 四、用户使用APP规则 1、用户在使用本APP服务中或通过本APP所传送、发布的任何内容并不反映或代表，也不得被视为反映或代表本APP所属团队的观点、立场或政策，本团队对此不承担任何责任。 2、用户不得利用本账号或本APP服务进行如下行为： (1) 提交、发布虚假信息，或盗用他人头像或资料，冒充、利用他人名义的； (2) 虚构事实、隐瞒真相以误导、欺骗他人的； (3) 利用技术手段批量建立虚假账号的； (4) 其他违反学校法规规定、侵犯其他用户合法权益、干扰本APP及团队正常运营的行为。 3、用户须对利用本APP服务传送信息的真实性、无害性、准确性、有效性等全权负责，与用户所传播的信息相关的任何法律责任由用户自行承担，与本APP及本团队无关。如因此给本APP及本团队造成损害的，用户应当依法承担责任。 五、知识产权及其他合法权益保护声明 1、淘矿的一切版权、商标权、专利权、商业秘密等知识产权均受中华人民共和国著作权法、商标法、专利法、反不正当竞争法和相应的国际条约以及其他知识产权法律法规的保护。 2、您不得利用淘矿发表、传送、传播、储存违反国家法律、危害国家安全、祖国统一、社会稳定、公序良俗的内容，或任何不当的、侮辱诽谤的、淫秽的、暴力等的及任何违反国家法律法规政策的内容，也不得传送或散布以其他方式实现传送含有受到知识产权法律保护的图像、相片、软件或其他资料的文件，除非用户拥有或控制着相应的权利或已得到所有必要的认可。否则，淘矿可以按照有关法律法规进行追责处理。 六、其他提示 1、本团队郑重提醒用户注意本协议中免除本APP及本团队责任和限制用户权利的条款，请用户仔细阅读，自主考虑及辨别相关风险。 2、本协议的效力、解释及纠纷的解决，适用于中华人民共和国法律。若用户和本APP及本团队之间发生任何纠纷或争议，首先应友好协商解决，协商不成的，用户同意将纠纷或争议提交本团队住所地有管辖权的人民法院管辖。 本团队有权启动必要的刑事及民事法律程序，维护本团队的合法权益，追究违法用户的法律责任。 3、本协议的任何条款无论因何种原因无效或不具有可执行性，其余条款仍有效，对双方具有约束力。 4、本APP及本团队未行使或执行本服务协议任何权利或规定，不构成对前述权利或其他权利之放弃。 5、本协议未尽事宜，以本APP运行后台及本团队后续不定期更新或补充本协议相关内容为准，更新及补充条款与本协议不可分割。</string>
    <string name="agreement_title">淘矿用户协议</string>
    <string name="agreement_agree">同意</string>
    <string name="publish_buy_tips">求购</string>
    <string name="publish_sell_tips">出售</string>
    <string name="publish_publishing_tips">正在发布</string>
    <string name="publish_fix_info_tips">请将信息填写完整</string>
    <string name="publish_select_type_tips">请选择类别</string>
    <string name="publish_success_tips">发布成功</string>
    <string name="publish_failure_tips">发布失败</string>
    <string name="publish_tips">发布</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
