<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_user_info"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:background="@drawable/bg_ripple_grey">

            <TextView
                android:id="@+id/tv_user_nick_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="23dp"
                android:ellipsize="end"
                android:maxWidth="200dp"
                android:singleLine="true"
                android:text="@string/my_click_to_login_tips"
                android:textColor="@color/commonColorGrey4"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.flying.taokuang.ui.AsyncImageView
                android:id="@+id/wo_icon"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginEnd="23dp"
                android:layout_marginRight="23dp"
                android:elevation="3dp"
                android:scaleType="centerInside" />

        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="#f7f7f7"
            android:gravity="center_vertical|left"
            android:paddingLeft="23dp"
            android:text="@string/my_trade_center"
            android:textColor="#6b6b6b"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/wo_fb"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@drawable/bg_ripple_grey"
            android:gravity="center_vertical|left"
            android:paddingLeft="23dp"
            android:text="@string/my_mine_selling"
            android:textColor="@color/commonColorGrey6"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:background="@color/commonColorGrey2" />

        <TextView
            android:id="@+id/wo_mc"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@drawable/bg_ripple_grey"
            android:gravity="center_vertical|left"
            android:paddingLeft="23dp"
            android:text="@string/my_mine_selled"
            android:textColor="@color/commonColorGrey6"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:background="@color/commonColorGrey2"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/wo_gm"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@drawable/bg_ripple_grey"
            android:gravity="center_vertical|left"
            android:paddingLeft="23dp"
            android:text="@string/my_mine_bought"
            android:textColor="@color/commonColorGrey6"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:background="@color/commonColorGrey2" />

        <TextView
            android:id="@+id/wo_sc"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@drawable/bg_ripple_grey"
            android:gravity="center_vertical|left"
            android:paddingLeft="23dp"
            android:text="@string/my_my_collect"
            android:textColor="@color/commonColorGrey6"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:background="@color/commonColorGrey2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="10dp"
            android:background="#f7f7f7"
            android:gravity="center_vertical|left"
            android:paddingLeft="23dp"
            android:text="@string/my_user_center"
            android:textColor="#6b6b6b"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/wo_rz"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@drawable/bg_ripple_grey"
            android:gravity="center_vertical|left"
            android:paddingLeft="23dp"
            android:text="@string/my_verify"
            android:textColor="@color/commonColorGrey6"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:background="@color/commonColorGrey2" />

        <TextView
            android:id="@+id/wo_zl"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@drawable/bg_ripple_grey"
            android:gravity="center_vertical|left"
            android:paddingLeft="23dp"
            android:text="@string/my_change_password"
            android:textColor="@color/commonColorGrey6"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:background="@color/commonColorGrey2" />

        <TextView
            android:id="@+id/wo_zx"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@drawable/bg_ripple_grey"
            android:gravity="center_vertical|left"
            android:paddingLeft="23dp"
            android:text="@string/my_log_out"
            android:textColor="@color/commonColorGrey6"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:background="@color/commonColorGrey2" />

        <TextView
            android:id="@+id/wo_about_us"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@drawable/bg_ripple_grey"
            android:gravity="center_vertical|left"
            android:paddingLeft="23dp"
            android:text="@string/my_about_us"
            android:textColor="@color/commonColorGrey6"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:background="@color/commonColorGrey2" />

    </LinearLayout>

</ScrollView>

